--- a/pastaamore/css/stylesheet.css
+++ b/pastaamore/css/stylesheet.css
@@ -16,7 +16,7 @@
 body { 
     margin: 0px;
     padding: 0px;
-    font-family: KlinicSlabBook;
+    font-family: 'KlinicSlabBook', sans-serif;
     font-size: 17px;
     background-size: cover;
     background-color: #fff;
@@ -40,7 +40,7 @@ blockquote {
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: KlinicSlabBold;
+    font-family: 'KlinicSlabBold', sans-serif;
     text-align: center;
 
 } 
@@ -108,7 +108,7 @@ nav {
     margin: auto;
     color: #fff;
     font-size: 20px;
-    font-family: KlinicSlabBold;
+    font-family: 'KlinicSlabBold', sans-serif;
     padding: 10px ;
 }
 
@@ -139,38 +139,38 @@ nav a {
     background-size: cover;
     text-align: center;
     height: 100vh;
-  }
+}
+
+@media (min-width: 301px) and (max-width: 1024px) {
+    #hero {
+        background-size: auto 100%;
+    }
+}
 
 /* About */
     .frame {
         background-color: #0B9446;
         color: #fff;
-        font-family: KlinicSlabBookIt;
+        font-family: 'KlinicSlabBookIt', sans-serif;
         font-size: 20px;
         padding: 15px;
         width: 100%;
         text-align: center;
     }
 
-  @media (min-width: 301px) and (max-width: 1024px) {
     .welcome {
         background-image: url(../img/welcome-wine.png);
         background-attachment: scroll;
         background-position: center;
         background-size: cover;
+    }
+
+  @media (min-width: 301px) and (max-width: 1024px) {
+    .welcome {
+        background-size: auto 100%;
         height: 50vh;
     }
   }
-
-  @media (min-width: 1025px) {
-    .welcome {
-        background-image: url(../img/welcome-wine.png);
-        background-attachment: scroll;
-        background-position: center;
-        background-size: cover;
-    }
-  }
-
 
 /* Divider */
 
@@ -183,19 +183,23 @@ nav a {
     height: 60vh;
 }
 
+@media (min-width: 301px) and (max-width: 1024px) {
+    #divider-restaurant {
+        background-size: auto 100%;
+    }
+}
+
 /* Cuisine */
+
+#cuisine {
+    background-color: #CF1C44;
+    height: 60vh;
+}
 
 @media (min-width: 301px) and (max-width: 1024px) {
     #cuisine {
         background-color: #CF1C44;
         height: 100vh;
-    }
-  }
-
-@media (min-width: 1025px) {
-    #cuisine {
-        background-color: #CF1C44;
-        height: 60vh;
     }
   }
 
@@ -229,6 +233,12 @@ nav a {
     height: 70vh;
   }
 
+@media (min-width: 301px) and (max-width: 1024px) {
+  #heroMenu {
+      background-size: auto 100%;
+  }
+}
+
 #menu {
     height:100%;
 }
@@ -244,7 +254,7 @@ nav a {
 #footer {
     background-color: #000;
     color: #fff;
-    font-family: KlinicSlabBookIt;
+    font-family: 'KlinicSlabBookIt', sans-serif;
     font-size: 16px;
     width: 100%;
     margin-bottom: 0px;
@@ -255,7 +265,7 @@ nav a {
 
 
 #footer a {
-    font-family: KlinicSlabBookIt;
+    font-family: 'KlinicSlabBookIt', sans-serif;
     font-size: 16px;
     color: #fff;
 }
